[package]
name = "astar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = "0.14.0"

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
    "bevy_asset",
    "bevy_sprite",
    "bevy_winit",
    "x11",
    "render",
    "bevy_text",
    "bevy_ui"
]
